--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "leaflet": "^0.7.7",
     "react": "^15.3.0",
-    "react-dom": "^15.3.0"
+    "react-dom": "^15.3.0",
+    "react-leaflet": "^0.12.3"
   },
   "browserify": {
     "transform": [
