Make basic map work

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "budo": "^9.2.1"
   },
   "dependencies": {
+    "esri-leaflet": "^2.0.4",
     "leaflet": "^0.7.7",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
