--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "leaflet": "^0.7.7",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
-    "react-leaflet": "^0.12.3"
+    "react-leaflet": "^0.12.3",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0"
   },
   "browserify": {
     "transform": [
